adicionei um paragrafo

--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -10,9 +10,11 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta laborum dolores odio, 
-        accusantium iste perferendis exercitationem illo amet nulla et quos esse non voluptatem 
-        eveniet sed voluptas ut eum cumque.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta laborum dolores odio, accusantium iste perferendis exercitationem illo amet nulla et quos esse non voluptatem eveniet sed voluptas ut eum cumque.
+    </p>
+    <hr>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, aperiam impedit earum praesentium consectetur fuga dolore, aspernatur incidunt repellendus temporibus doloribus. Totam quae voluptatum autem ipsa distinctio itaque nemo alias?
     </p>
 </body>
 </html>
